# PyMatcha

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pymatcha/: __init__.py  __main__.py  nn.py  optim.py  tensor.py
pymatcha/autograd/: __init__.py  engine.py  grad_fn.py
tests/: test.ipynb
