[build-system]
# 构建工具配置（这是必须的）
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMatcha"
version = "0.1.0"
description = "A lightweight deep learning library inspired by PyTorch."
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "karinadegou", email = "karinanergy010000101@gmail.com" },
]

requires-python = ">=3.10"

# 从原 requirements.txt 迁移过来的依赖
dependencies = [
    "numpy>=1.26.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.8.0",
]

# 分类信息（与 setup.py classifiers 相同）
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 项目链接
[project.urls]
Homepage = "https://github.com/karinadegou/PyMatcha"
Repository = "https://github.com/karinadegou/PyMatcha"
Issues = "https://github.com/karinadegou/PyMatcha/issues"

# setuptools 如何发现包
[tool.setuptools.packages.find]
where = ["."]
include = ["pymatcha*"]
exclude = ["tests*", "examples*"]

# 如果未来添加命令行工具（与 setup.py 的 entry_points 对应）
[project.scripts]
pymatcha = "pymatcha.__main__:main"

# 可选：代码风格与开发工具配置
[tool.black]
line-length = 88
target-version = ['py39']
