[metadata]
name = PyMatcha
version = 0.1.0
description = A lightweight deep learning library inspired by PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = karinadegou
author_email = karinanergy010000101@gmail.com
url = https://github.com/karinadegou/PyMatcha
project_urls =
    Homepage = https://github.com/karinadegou/PyMatcha
    Repository = https://github.com/karinadegou/PyMatcha
    Issues = https://github.com/karinadegou/PyMatcha/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.10
packages = find:
install_requires =
    numpy>=1.26.0
    tqdm>=4.65.0
    matplotlib>=3.8.0

[options.packages.find]
where = .
include = pymatcha*
exclude =
    tests*
    examples*

[options.entry_points]
console_scripts =
    pymatcha = pymatcha.__main__:main